--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ body {
 }
 
 .header,
-.footer {
+.footer,
+.s1 {
     background: #1f2937;
     color: white;
     display: flex;
-    padding: 8px;
+    padding: 8px 50px;
     align-items: center;
 }
 
@@ -27,20 +28,57 @@ body {
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
-    margin: 0 0 0 35px;
+    margin: 0 0 0 100px;
 }
 
 ul#l1 {
-    margin: 0 35px 0 0;
+    margin: 0 100px 0 0;
     padding: 0;
     list-style: none;
     display: flex;
     gap: 10px;
 }
 
-ul#l1 li {
+.title2 {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: bolder;
+}
+
+.subtext {
     font-size: 18px;
     color: #e5e7eb;
 }
+
+.s1{
+    padding: 100px 30px;
+    justify-content: space-around;
+    margin: 0;
+    gap: 150px;
+}
+
+#tb1 {
+    width: 500px;
+    height: 200px;
+    margin-left: auto;
+}
+
+img#kobe {
+    height: 250px;
+    width: 450px;
+    margin-right: auto;
+}
+
+button#signup {
+    border-radius: 3px;
+    background: #3882f6;
+    color: white;
+    border: none;
+    padding: 5px 15px; 
+    margin-top: 10px;
+}
+
+
+
 
 
